--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -1,11 +1,32 @@
 .modal.modal-container { display: none; z-index: 10000; position: fixed; top: 0; left: 0; width: 100%; height: 100%; }
-.modal.modal-wall { z-index: 10010; position: absolute; width: 100%; height: 100%; background-color: darkgray;  opacity: 70%; text-align: center; }
-.modal.modal-wrapper { z-index: 10020; position: relative; left: calc(50% - 250px); top: 10px; width: 500px; height: 400px; background-color: white; border-radius: 3%; box-shadow: 0 0 10px 10px darkgray; }
-
-.modal.modal-wrapper .modal-header { z-index: 10022; position: absolute; height: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; padding: 8px 5px; }
-
-.modal.modal-wrapper .modal-body { z-index: 10021; position: relative; padding-top: 50px; height: 100%; padding-bottom: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; }
-
-.modal.modal-wrapper .modal-footer { z-index: 10022; position: absolute; bottom: 0; height: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; padding: 8px 5px; }
-
 .modal.modal-container.open { display: block; }
+
+.modal.modal-wall { z-index: 10010; position: absolute; width: 100%; height: 100%; background-color: darkgray;  opacity: 70%; text-align: center; }
+.modal.modal-wrapper { z-index: 10020; position: relative; background-color: white; border-radius: 15px; box-shadow: 0 0 10px 10px darkgray; }
+
+.modal.modal-header { z-index: 10022; position: absolute; height: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; }
+
+.modal.modal-body { z-index: 10021; position: relative; padding-top: 50px; height: 100%; padding-bottom: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; }
+
+.modal.modal-footer { z-index: 10022; position: absolute; bottom: 0; height: 50px; width: 100%; background-color: transparent; box-shadow: 0 0 5px 0px darkgray; }
+
+.modal.modal-button { border: none; background-color: white; box-shadow: 0 0 3px 1px darkgrey inset; padding: 5px 0px; text-align: center; width: 50px; margin: 3px 3px; }
+.modal.modal-button:hover { cursor: pointer; background-color: darkgray; }
+
+
+.modal.modal-header-wrapper, .modal.modal-body-wrapper, .modal.modal-footer-wrapper { padding: 8px 5px; width: 100%; height: 100%; }
+
+.modal.modal-body-wrapper { overflow: scroll; }
+.modal.modal-body-wrapper::-webkit-scrollbar { display: none; }
+.modal.modal-body:hover { z-index: 10023; background-color: white; padding: 10px 0; border-radius: 15px; animation: width_view 0.3s; box-shadow: 0 0 5px 1px darkgrey inset; }
+
+.list-header.item-row { border-bottom: 1px solid darkgray; font-weight: bold; }
+.list-data.item-row { border-bottom: 1px dotted darkgray; }
+
+@media only screen and (min-width: 641px) {
+  .modal.modal-wrapper { left: calc(50% - 250px); top: 10px; width: 500px; height: 90%;  }
+}
+
+@media only screen and (max-width: 640px) {
+  .modal.modal-wrapper { left: 5%; top: 5%; width: 90%; height: 90%;  }
+}
